--- a/html-frontend/index.html
+++ b/html-frontend/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <title>K8S Example</title>
+        <title>Docker Demo</title>
     </head>
     <style>
 h1 {
@@ -37,8 +37,7 @@ h1 {
     </style>
     <body>
         <h1>
-            RabbitMQ Task Status <br />
-            <!--# echo var="HOSTNAME" default="UNKNOWN" -->
+            RabbitMQ Task Status 
         </h1>
         <div class="docker-demo">
             <p>In Queue: <span id="queue"></span></p>
